--- a/style.css
+++ b/style.css
@@ -1,10 +1,78 @@
  /* work sanse font */
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;600;700;800&display=swap');
 
-
+  /* shared-style */
+  .primary-btn{
+    width: 120px;
+    height: 44px;
+    flex-shrink: 0;
+    border-radius: 8px;
+    background: #FF900E;
+    color: #FFF;
+    text-align: center;
+  
+  }
+  .primary-btn:hover{
+    background-color: antiquewhite;
+    color:#424242
+  }
 *{
     margin:0;
     padding:0;
     font-family: 'Work Sans', sans-serif;
 }
+ /* header-styles */
+header{
+    background: rgba(255, 144, 14, 0.10);
+    padding:50px 00px;
+}
+
+.nav-bar{
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.nav-title{
+    color:#131313;
+    font-size: 2.8rem;
+    font-weight: 700;
+    padding:0px 200px;
+ 
+}
+.nav-links{
+    display: flex;
+    gap:10px;
+    list-style: none;
+   
+}
+.nav-links>li{
+    margin-right:30px;
+}
+.nav-links>li>a{
+    text-decoration: none;
+    color: #424242;
+    text-align: center;
+    font-size:1rem;
+    font-weight: 500;
+    line-height: 26px; 
+    
+}
+.banner-content{
+    max-width:800px;
+    text-align:center;
+    margin:70px auto;
+
+}
+.banner-title{
+    font-size:4rem;
+    font-weight: 700;
+    color:#131313
+}
+.banner-description{
+    font-size: 1rem;
+    font-weight:400rem;
+    color:#727272;
+    line-height:26px;
+}
+
 
