--- a/style.css
+++ b/style.css
@@ -3,8 +3,7 @@
 
   /* shared-style */
   .primary-btn{
-    width: 120px;
-    height: 44px;
+    padding:20px 25px;
     flex-shrink: 0;
     border-radius: 8px;
     background: #FF900E;
@@ -43,11 +42,14 @@ header{
     display: flex;
     gap:10px;
     list-style: none;
+    padding:0px 100px;
    
 }
 .nav-links>li{
     margin-right:30px;
+    
 }
+
 .nav-links>li>a{
     text-decoration: none;
     color: #424242;
@@ -73,6 +75,56 @@ header{
     font-weight:400rem;
     color:#727272;
     line-height:26px;
+    padding:10px;
+}
+.banner>img{
+    width:80%;
+    margin-top:5px;
+    margin-left:150px;
+  
+}
+
+
+
+/* mobile-view */
+@media screen and (max-width:576px) {
+    .banner>img{
+        width: 100%;
+        margin-left:0px;
+      
+    }
+    header{
+        padding:0px;
+    }
+    .nav-bar{
+        flex-direction: column;
+    }
+    .nav-title{
+        padding:20px;
+    }
+    .nav-links{
+        padding:20px;
+    }
+    
+}
+
+/* tablet-view */
+@media screen and (min-width:576px) and (max-width:960px) {
+    .nav-bar{
+        flex-direction: column;
+    }
+    .nav-title{
+        padding:50px;
+    }
+    .nav-links{
+        padding:50px;
+    }
+
+    .banner>img{
+        width: 100%;
+        margin-left:0px;
+      
+    }
 }
 
 
