--- a/style.css
+++ b/style.css
@@ -86,6 +86,7 @@ header{
 
 
 
+
 /* mobile-view */
 @media screen and (max-width:576px) {
     .banner>img{
@@ -127,4 +128,46 @@ header{
     }
 }
 
+/* feature-section */
 
+main{
+    width:100%;
+    margin:0px;
+}
+.teams-container{
+    display:flex;
+    align-items:center;
+
+}
+.team-img-container{
+    display:grid;
+    grid-template-columns: repeat(2,1fr);
+    gap:1.5rem;
+
+}
+.teams-content{
+    margin:0px 70px 0px 70px;
+}
+.teams-title{
+    font-size: 2.8rem;
+}
+.quick-list{
+    color:#727272;
+    font-weight: 500;
+}
+.of-our{
+    color:#131313;
+    font-weight: 700;
+}
+
+.feature{
+    color: #FF900E;
+    font-weight: 700;
+}
+.teams-description{
+    color: var(--dark-03, #727272);
+font-size:1rem;
+font-weight: 400;
+line-height: 1.6rem; 
+padding:10px;
+}
