--- a/style.css
+++ b/style.css
@@ -186,7 +186,29 @@ main{
     font-weight: 400;
     line-height: 26px;
 }
-
+/* sponsor-style */
+.sponspor-logo{
+    display:flex;
+    justify-content: space-around;
+}
+.sponspor-logo>img{
+    padding:20px;
+}
+.sponspor-title{
+    color:#131313;
+    font-size: 45px;
+    font-weight: 700;
+    text-align:center;
+    margin:100px 0px 24px;
+}
+.sponspor-description{
+    color:#727272;
+    text-align: center;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    margin:0px 0px 70px 0px;
+}
 
 
 
@@ -228,6 +250,13 @@ main{
         align-items: center;
         gap:10px;
     }
+    .sponspor-logo{
+        flex-direction: column;
+        width:200px;
+        margin: 0 auto;
+        gap:20px;
+
+    }
     
 }
 
@@ -264,5 +293,9 @@ main{
   }
   .fact-title{
     text-align:center;
+  }
+  .sponspor-logo{
+    display:grid;
+    grid-template-columns: repeat(2, 1fr);
   }
 }
