--- a/style.css
+++ b/style.css
@@ -193,6 +193,7 @@ main{
 }
 .sponspor-logo>img{
     padding:20px;
+    width:165px;
 }
 .sponspor-title{
     color:#131313;
@@ -210,6 +211,23 @@ main{
     margin:0px 0px 70px 0px;
 }
 
+/* footer-section */
+
+.footer-section{
+    width: 1140px;
+    margin:0 auto;
+    height: 75px;
+    border-radius: 8px;
+    background: #FFF4E7;
+    margin-top:100px;
+}
+.footer-description{
+    color:#424242;
+text-align: center;
+font-size: 20px;
+font-weight: 400;
+padding:30px 300px;
+}
 
 
 
@@ -252,15 +270,26 @@ main{
     }
     .sponspor-logo{
         flex-direction: column;
-        width:200px;
+        width:165px;
         margin: 0 auto;
         gap:20px;
 
     }
+
+    .footer-section{
+        width:100vw;
+       
+    }
+    .footer-description{
+        color:#424242;
+        margin:0px;
+        padding:0px;
+
+
     
 }
 
-
+}
 
 /* tablet-view */
 @media screen and (min-width:576px) and (max-width:960px) {
@@ -296,6 +325,22 @@ main{
   }
   .sponspor-logo{
     display:grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns:repeat(2,1fr);
   }
+
+  .sponspor-logo{
+    flex-direction: column;
+    width:165px;
+    margin: 0 auto;
+    gap:20px;
+  }
+  .footer-section{
+    width:100vw;
+   
+}
+.footer-description{
+    color:#424242;
+    margin:0px;
+    padding:0px;
+}
 }
